--- a/frontend/styles/provided.css
+++ b/frontend/styles/provided.css
@@ -46,32 +46,94 @@ html, body {
 	width: 100%;
 	height: 100vh;
 	overflow: hidden;
+	background-color: black;
 }
 
 .channelsPublic {
 	grid-area: Public;
+	background-color: cornflowerblue;
+	border-radius: 30px;
+	text-align: center;
+	overflow: scroll;
+	margin: 10px;
+	margin-left: 30px;
+	overflow-y: hidden;
+}
+
+.channelsPublic::-webkit-scrollbar {
+    width: 15px;
+}
+
+.channelsPublic::-webkit-scrollbar-thumb {
+    border-radius: 30px;
+    background-color: lightgrey;
+}
+
+.channelsPublic::-webkit-scrollbar-corner {
+	background: rgba(0,0,0,0);
 }
 
 .channelsPrivate {
 	grid-area: Private;
+	background-color: cornflowerblue;
+	border-radius: 30px;
+	text-align: center;
+	overflow: scroll;
+	margin: 10px;
+	margin-left: 30px;
+	overflow-y: hidden;
+}
+
+.channelsPrivate::-webkit-scrollbar {
+    width: 15px;
+}
+
+.channelsPrivate::-webkit-scrollbar-thumb {
+    border-radius: 30px;
+	background-color: lightgrey;
+}
+.channelsPrivate::-webkit-scrollbar-corner {
+	background: rgba(0,0,0,0);
 }
 
 .channelInfo {
 	grid-area: Info;
 	white-space: pre-line;
 	line-height: 13px;
+	height: auto;
+	margin: 10px;
+	margin-left: 30px;
+	background-color: cornflowerblue;
+	border-radius: 30px;
+	overflow: scroll;
+
+}
+
+.channelInfo::-webkit-scrollbar {
+    width: 15px;
+}
+
+.channelInfo::-webkit-scrollbar-thumb {
+    border-radius: 30px;
+	background-color: lightgrey;
+}
+.channelInfo::-webkit-scrollbar-corner {
+	background: rgba(0,0,0,0);
 }
 
 .channelMessage {
 	grid-area: Message;
 	white-space: pre-line;
 	line-height: 30px;
+	margin: 30px;
+	border-radius: 30px;
+	
+	margin-bottom: 10px;
 }
 
 .messageView {
 	overflow: scroll;
-	height: 45vh;
-	flex-direction: column-reverse;
+	height: 50vh;
 }
 .messageView::-webkit-scrollbar {
     width: 15px;
@@ -79,11 +141,19 @@ html, body {
 
 .messageView::-webkit-scrollbar-thumb {
     border-radius: 30px;
-    border: 3px solid #B6C5CE;
+    background-color: lightgrey;
+}
+.messageView::-webkit-scrollbar-corner {
+	background: rgba(0,0,0,0);
 }
 
 .user {
 	grid-area: User;
+	background-color: cornflowerblue;
+	border-radius: 30px;
+	margin: 10px;
+	margin-right: 30px;
+	text-align: center;
 }
 
 .channelCreateForm {
@@ -140,4 +210,24 @@ html, body {
 	width: 20vw;
 	text-align: center;
 	margin: auto;
+}
+
+.textbox {
+	margin-left: 10px;
+	white-space: normal;
+}
+
+.typeBox {
+	width: 300px
+}
+
+.infoText {
+	margin-left: 10px;
+}
+
+.messageOutputBox {
+	width: 75%;
+	display: inline;
+	min-height: 50px;
+	border-radius: 15px;
 }
