--- a/frontend/styles/provided.css
+++ b/frontend/styles/provided.css
@@ -46,18 +46,18 @@ html, body {
 	width: 100%;
 	height: 100vh;
 	overflow: hidden;
-	background-color: black;
+	background-color: rgb(32,33,36);
 }
 
 .channelsPublic {
 	grid-area: Public;
-	background-color: cornflowerblue;
+	background-color: white;
 	border-radius: 30px;
 	text-align: center;
 	overflow: scroll;
 	margin: 10px;
 	margin-left: 30px;
-	overflow-y: hidden;
+	overflow-x: hidden;
 }
 
 .channelsPublic::-webkit-scrollbar {
@@ -75,13 +75,13 @@ html, body {
 
 .channelsPrivate {
 	grid-area: Private;
-	background-color: cornflowerblue;
+	background-color: white;
 	border-radius: 30px;
 	text-align: center;
 	overflow: scroll;
 	margin: 10px;
 	margin-left: 30px;
-	overflow-y: hidden;
+	overflow-x: hidden;
 }
 
 .channelsPrivate::-webkit-scrollbar {
@@ -103,7 +103,7 @@ html, body {
 	height: auto;
 	margin: 10px;
 	margin-left: 30px;
-	background-color: cornflowerblue;
+	background-color: white;
 	border-radius: 30px;
 	overflow: scroll;
 
@@ -123,7 +123,6 @@ html, body {
 
 .channelMessage {
 	grid-area: Message;
-	white-space: pre-line;
 	line-height: 30px;
 	margin: 30px;
 	border-radius: 30px;
@@ -133,7 +132,9 @@ html, body {
 
 .messageView {
 	overflow: scroll;
-	height: 50vh;
+	height: 85%;
+	margin-top: 20px;
+	margin-left: 20px;
 }
 .messageView::-webkit-scrollbar {
     width: 15px;
@@ -141,7 +142,7 @@ html, body {
 
 .messageView::-webkit-scrollbar-thumb {
     border-radius: 30px;
-    background-color: lightgrey;
+	background-color: darkgray;
 }
 .messageView::-webkit-scrollbar-corner {
 	background: rgba(0,0,0,0);
@@ -149,7 +150,7 @@ html, body {
 
 .user {
 	grid-area: User;
-	background-color: cornflowerblue;
+	background-color: white;
 	border-radius: 30px;
 	margin: 10px;
 	margin-right: 30px;
@@ -218,7 +219,10 @@ html, body {
 }
 
 .typeBox {
-	width: 300px
+	width: 85%;
+	display: none;
+	float: left;
+	margin-left: 20px;
 }
 
 .infoText {
@@ -226,8 +230,29 @@ html, body {
 }
 
 .messageOutputBox {
-	width: 75%;
-	display: inline;
-	min-height: 50px;
-	border-radius: 15px;
+	background-color: aquamarine;
+	width: fit-content;
+	min-width: 30px;
+	text-align: center;
+	border-radius: 12px;
+	white-space: pre-wrap;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.timeFormat {
+	text-align: center;
+}
+
+.buttonBox {
+	border-radius: 12px;
+}
+
+.textarea {
+	border-top: solid grey;
+}
+
+.EMJ {
+	background-color: rgba(0,0,0,0);
+	border: none;
 }
