--- a/frontend/styles/provided.css
+++ b/frontend/styles/provided.css
@@ -37,7 +37,7 @@ html, body {
 
 .loggedIn {
 	display: none;
-	grid-template-columns: 2fr 10fr 1fr;
+	grid-template-columns: 2fr 10fr 4fr;
 	grid-template-rows: 1fr 1fr 2fr;
 	grid-template-areas: 
 		"Public Info User"
@@ -56,7 +56,8 @@ html, body {
 	text-align: center;
 	overflow: scroll;
 	margin: 10px;
-	margin-left: 30px;
+	margin-left: 5%;
+	margin-right: 0px;
 	overflow-x: hidden;
 }
 
@@ -80,7 +81,8 @@ html, body {
 	text-align: center;
 	overflow: scroll;
 	margin: 10px;
-	margin-left: 30px;
+	margin-left: 5%;
+	margin-right: 0px;
 	overflow-x: hidden;
 }
 
@@ -101,8 +103,7 @@ html, body {
 	white-space: pre-line;
 	line-height: 13px;
 	height: auto;
-	margin: 10px;
-	margin-left: 30px;
+	margin: 1%;
 	background-color: white;
 	border-radius: 30px;
 	overflow: scroll;
@@ -124,16 +125,13 @@ html, body {
 .channelMessage {
 	grid-area: Message;
 	line-height: 30px;
-	margin: 30px;
+	margin: 1%;
 	border-radius: 30px;
-	
-	margin-bottom: 10px;
 }
 
 .messageView {
 	overflow: scroll;
-	height: 85%;
-	margin-top: 20px;
+	height: 80%;
 	margin-left: 20px;
 }
 .messageView::-webkit-scrollbar {
@@ -152,9 +150,10 @@ html, body {
 	grid-area: User;
 	background-color: white;
 	border-radius: 30px;
-	margin: 10px;
-	margin-right: 30px;
+	margin: 5%;
+	margin-right: 6%;
 	text-align: center;
+	align-items: center;
 }
 
 .channelCreateForm {
@@ -186,6 +185,10 @@ html, body {
 }
 
 .leaveChannelButton {
+	display: none;
+}
+
+.inviteChannelButton {
 	display: none;
 }
 
@@ -263,5 +266,21 @@ html, body {
 }
 
 .pinnedMessages {
-	text-align: center;
+	display: none;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: rgba(0,0,0,0);
+	border: none;
+}
+
+.senderButton {
+	background-color: rgba(0,0,0,0);
+	border: none;
+}
+
+@media (max-width: 1000px) {
+	.loggedIn {
+		grid-template-columns: 2fr 2fr 1fr;
+		grid-template-rows: 1fr 1fr 2fr;
+	}
 }
